--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h1><a href="index.html">H.W</a></h1>
                 <!-- <img src="assets/img/logo.png" alt="" /> -->
               </div>
-              <!-- end logo -->
+              <!-- end logo logo -->
             </div>
 
             <div class="span8">
